@@ -12,30 +12,31 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
+
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Controller
-@RequestMapping("/blog")
-public class ArticleController extends UserBaseController{
+@RequestMapping("/blog" )
+public class ArticleController extends UserBaseController {
 
     @Autowired
     private ArticleService articleService;
 
-    @ModelAttribute("categoryList")
-    private List<Category> initCategoryList(){
+    @ModelAttribute("categoryList" )
+    private List<Category> initCategoryList() {
         return getListCategory();
     }
 
-    @GetMapping("")
+    @GetMapping("" )
     public String getListArticle(Model model) {
 
-        List<Article> articleList = articleService.findAll().stream().filter(e -> e.getStatus() == CommonConst.FLAG_ON).collect(Collectors.toList());
+        List<Article> articleList = articleService.findAvailableList();
 
         if (ObjectUtils.isEmpty(articleList)) {
             return "redirect:/trang-chu";
         }
-
 
         Article mainArticle = getMainArticle(articleList);
 
@@ -45,12 +46,15 @@ public class ArticleController extends UserBaseController{
         return "user/article/index";
     }
 
-    @GetMapping("/show/{id}")
-    public String showDetail(@PathVariable("id") Long id, Model model) {
+    @GetMapping("/show/{id}" )
+    public String showDetail(@PathVariable("id" ) Long id, Model model) {
         Article article = articleService.findById(id);
 
-        List<Article> relatedList = articleService.findAll().stream().filter(e -> e.getStatus() == CommonConst.FLAG_ON)
-                .limit(10L).collect(Collectors.toList());
+        if (article.getStatus() == CommonConst.FLAG_OFF) {
+            return "redirect:/trang-chu";
+        }
+
+        List<Article> relatedList = new ArrayList<>(articleService.findAvailableList().stream().limit(10L).toList());
 
         relatedList.remove(article);
 
